--- a/mysite/blog/templates/post/favourites.html
+++ b/mysite/blog/templates/post/favourites.html
@@ -1,12 +1,12 @@
 {% extends "blog/base.html" %}
 
-{% block title %}My Blog{% endblock %}
+{% block title %}Your favourite posts{% endblock %}
 
 {% block content %}
-  <h1>My Blog</h1>
-  {% for post in posts %}
+  <h1>Your favourite posts</h1>
+  {% for post in favourite_posts %}
     <h2>
-      <a href="{{post.get_absolute_url}}">
+      <a href="{% url 'blog:post_detail' post.id %}">
         {{ post.title }}
       </a>
     </h2>
