--- a/mysite/blog/templates/post/detail.html
+++ b/mysite/blog/templates/post/detail.html
@@ -7,12 +7,27 @@
   <p class="date">
     Published {{ post.publish }} by {{ post.author }}
   </p>
-  <p>
-  {% if is_favourite %}
-    ❤️
-  {% else %}
-      <a href="{% url 'blog:add_favourite' post.id %}">Add to favourites</a>
-  {% endif %}
-  </p>
   {{ post.body|linebreaks }}
+  <p>
+    <a href="{% url "blog:post_share" post.id %}">
+      Share this post
+    </a>
+  </p>
+  {% with comments.count as total_comments %}
+    <h2>
+      {{ total_comments }} comment{{ total_comments|pluralize }}
+    </h2>
+  {% endwith %}
+  {% for comment in comments %}
+    <div class="comment">
+      <p class="info">
+        Comment {{ forloop.counter }} by {{ comment.name }}
+        {{ comment.created }}
+      </p>
+      {{ comment.body|linebreaks }}
+    </div>
+  {% empty %}
+    <p>There are no comments yet.</p>
+  {% endfor %}
+  
 {% endblock %}
