added the functionality for comments

--- a/mysite/blog/templates/post/detail.html
+++ b/mysite/blog/templates/post/detail.html
@@ -29,5 +29,5 @@
   {% empty %}
     <p>There are no comments yet.</p>
   {% endfor %}
-  
+  {% include "post/includes/comment_form.html" %}
 {% endblock %}
